...
        )
    ) {
        TextField(
            modifier = Modifier
                .padding(top = 8.dp, start = 24.dp, end = 24.dp)
                .fillMaxWidth()
                .testTag("editable_title_test")
                .animateContentSize(),
            value = task.title,
            placeholder = {
                Text(text = "Title")
            },
            onValueChange = {
...
            })

        TextField(
            modifier = Modifier
                .padding(top = 8.dp, start = 24.dp, end = 24.dp)
                .fillMaxWidth()
                .testTag("editable_desc_test")
                .animateContentSize(),
            value = task.desc,
            placeholder = {
                Text(text = "Description")
            },
            keyboardActions = KeyboardActions(onDone = {onDoneAction()}),
...
